# HECTOR_HW

./: .gitignore  CMakeLists.txt  README.md  Todo.txt  setup.py
Calibration/: Calibration  Data_import.cpp  cppTypes.h  offset.txt  raw_imu.txt
ConvexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp
Interface/HW_interface/: CMakeLists.txt
Interface/HW_interface/Calibration/: Calibration  Data_import.cpp  offset.txt  orientation_tools.h
Interface/HW_interface/include/interface/: CmdPanel.h  HighCmdPanel.h  IOInterface.h  IOSDK.h  Joystick.h  KeyBoard.h  WirelessHandle.h
Interface/HW_interface/include/stateestimator/: PoseData.h  PositionVelocityEstimator.h
Interface/HW_interface/src/: main.cpp
Interface/HW_interface/src/interface/: IOSDK.cpp  KeyBoard.cpp  WirelessHandle.cpp
Interface/HW_interface/src/stateestimator/: PoseData.cpp  PositionVelocityEstimator.cpp
Interface/MATLAB_ReadData/: read_data.m
Interface/MATLAB_ReadData/include/: ATE.m  Adjoint.m  Create3DAxis.m  EUL_ZYX_to_R_bw.m  EUL_ZYX_to_R_wb.m  EUL_ZYX_to_Rotation.m  NearZero.m  RE.m  expm_sek.m  expm_so2_vec.m  expm_so3.m  expm_so3_casadi.m  fcn_momentumObserver.m  forward_kinematics.m  forward_kinematics_mini_cheetah.m  generalized_orientation_mapping_so3_casadi.m  inv_right_jacobian_so3_casadi.m  jacobian_leg.m  jacobian_mini_cheetah.m  logm_sek.m  logm_so2.m  logm_vec.m  lpf_junny.m  norm2.m  quat2R_casadi.m  right_jacobian_so3_casadi.m  rotx.m  roty.m  unvectorize.m
Interface/MATLAB_ReadData/include/basic/: Rotation_to_Euler.m  expm_vec_casadi.m  hat_so2.m  inv_generalized_orientation_mapping_so3_casadi.m  inv_right_jacobian_so3.m  logm_so3.m  quat2R.m  right_jacobian_so3.m  rotz.m  vee_so2.m
Interface/python_interface/: HectorController.hpp  hector_controller_pybind.cpp
PDController/: PDController_Stand.cpp  PDController_Stand.h
docs/: controller_parameter.md  encoder_calibration.md  operation_instruction.md  python_interface.md
hector_system/: CMakeLists.txt
hector_system/ConvexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  GaitGenerator.cpp  GaitGenerator.h  RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp  convexMPC_interface.h
hector_system/PDController/: PDController_Stand.cpp  PDController_Stand.h
hector_system/hector_description/meshes/: L_foot.STL  L_foot_flat.STL  R_foot.STL  calf.STL
hector_system/hector_description/urdf/: hector.urdf  hector_flat_foot.urdf
hector_system/include/FSM/: FSM.h  FSMState.h  FSMState_PDStand.h  FSMState_Passive.h  FSMState_Walking.h
hector_system/include/common/: Biped.h  ContactEstimator.h  ControlFSMData.h  DesiredCommand.h  FootPlacementPlanner.h  FootSwingTrajectory.h  LegController.h  RL.h  StateEstimatorContainer.h  SwingLegController.h  cppTypes.h  enumClass.h
hector_system/include/common/Utilities/: pseudoInverse.h
hector_system/include/interface/: CmdPanel.h  IOInterface.h  Joystick.h  KeyBoard.h
hector_system/src/FSM/: FSM.cpp  FSMState.cpp  FSMState_PDStand.cpp  FSMState_Passive.cpp  FSMState_Walking.cpp
hector_system/src/common/: DesiredCommand.cpp  FootPlacementPlanner.cpp  FootSwingTrajectory.cpp  LegController.cpp  OrientationEstimator.cpp  SwingLegController.cpp
hector_system/src/interface/: IOSDK.cpp  KeyBoard.cpp  WirelessHandle.cpp
hector_system/utility/: BasicFunctions.hpp
include/FSM/: FSM.h  FSMState.h  FSMState_PDStand.h  FSMState_Walking.h
include/common/: Biped.h  ControlFSMData.h  DesiredCommand.h  LegController.h  PositionVelocityEstimator.h  Quadruped.h  StateEstimatorContainer.h  cppTypes.h  enumClass.h
include/interface/: CmdPanel.h  IOInterface.h  IOSDK.h
run/: run_hardware.cpp
scripts/: run_hardware.cpp
src/: main.cpp
src/FSM/: FSM.cpp  FSMState_PDStand.cpp  FSMState_Passive.cpp  FSMState_Walking.cpp
src/common/: FootSwingTrajectory.cpp  LegController.cpp  OrientationEstimator.cpp  PoseData.cpp  PositionVelocityEstimator.cpp
src/interface/: IOSDK.cpp  Joystick.cpp  KeyBoard.cpp
